# nixhist

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: app.rs  config.rs  main.rs  types.rs
src/nix/: commands.rs  detect.rs  generations.rs  mod.rs  packages.rs
src/ui/: mod.rs  render.rs  theme.rs  widgets.rs
